--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">TVScreenRecorder</string>
+    <string name="app_name">ScreenRecorder</string>
+    <string name="record_str">start</string>
+    <string name="stop_str">exit</string>
 </resources>
